fix z-index of block-toolbar

--- a/src/components/manage/Blocks/Accordion/editor.less
+++ b/src/components/manage/Blocks/Accordion/editor.less
@@ -25,6 +25,10 @@
     .block-add-button {
       display: none;
     }
+
+    .block-toolbar {
+      z-index: 2;
+    }
   }
 }
 
